More dependency upgrades
- Bump Jackson to 3.x
- Bump JUnit to 6.x
- Update license headers